Add Cards for places
For task 8 of AirBnB_clone->web_static

--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -4,4 +4,5 @@ body {
 	color: #484848;
 	font-size: 14px;
 	font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	position: relative;
 }
