--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -4,9 +4,11 @@ body {
 	color: #484848;
 	font-size: 14px;
 	font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	position: relative;
 }
 
 .container {
 	max-width: 1000px;
+	min-height: 100vh;
 	margin: 30px auto;
 }
