--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,10 +1,9 @@
 footer {
-	bottom: 0%;
 	width: 100%;
 	height: 60px;
 	line-height: 60px;
-	position: absolute;
 	text-align: center;
 	background-color: white;
 	border-top: 1px solid #cccccc;
+	border-bottom: 1px solid #cccccc;
 }
