--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,29 +1,26 @@
 .places {
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
 	position: relative;
-	padding-top: 80px;
+	padding-top: 100px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 .places h1 {
-	position: absolute;
 	font-size: 30px;
-	margin: 0px;
-	top: 40px;
-	left: 20px;
+	position: absolute;
+	top: 60px;
+	left: 0;
+	margin: 0;
 }
-
 .places article {
-	text-align: center;
+	flex-shrink: 0;
 	width: 390px;
-	height: 50px;
-	padding: 20px;
-	margin: 20px;
 	border: 1px solid #ff5a5f;
 	border-radius: 4px;
+	padding: 20px;
+	margin: 20px;
 }
-
 .places article h2 {
 	font-size: 30px;
-	display: inline;
+	text-align: center;
 }
