--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,8 +1,10 @@
 body {
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 	color: #484848;
 	font-size: 14px;
-	font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	position: relative;
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
