--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,9 +1,9 @@
 footer {
-	width: 100%;
-	height: 60px;
-	line-height: 60px;
-	text-align: center;
 	background-color: white;
+	height: 60px;
+	width: 100%;
+	text-align: center;
+	line-height: 60px;
+	margin-top: auto;
 	border-top: 1px solid #cccccc;
-	border-bottom: 1px solid #cccccc;
 }
