--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,9 +1,10 @@
 header {
-	width: 100%;
 	height: 70px;
-	background-color: white;
+	width: 100%;
+	color: white;
 	border-bottom: 1px solid #cccccc;
-	background-image:url("../images/logo.png");
+	background: url("../images/logo.png");
 	background-repeat: no-repeat;
 	background-position: 20px;
+	line-height: 70px;
 }
