--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,14 +1,15 @@
 body {
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 	color: #484848;
 	font-size: 14px;
-	font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	position: relative;
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
-
 .container {
 	max-width: 1000px;
-	min-height: 100vh;
 	margin: 30px auto;
+	width: 100%;
 }
