--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -2,25 +2,24 @@
 	background-color: white;
 	height: 70px;
 	width: 100%;
-	border: 1px solid #dddddd;
+	border: 1px solid #cccccc;
 	border-radius: 4px;
 	position: relative;
 }
-
 .filters button {
 	font-size: 18px;
 	background-color: #ff5a5f;
 	color: #ffffff;
 	height: 48px;
 	width: 20%;
-	border-style: none;
+	border: none;
 	border-radius: 4px;
 	position: absolute;
 	top: 50%;
-	right: 30px;
 	transform: translateY(-50%);
+	right: 30px;
+	cursor: pointer;
 }
-
 .filters button:hover {
 	opacity: 90%;
 }
