--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -2,51 +2,42 @@
 	background-color: white;
 	height: 70px;
 	width: 100%;
-	border: 1px solid #dddddd;
+	border: 1px solid #cccccc;
 	border-radius: 4px;
 	position: relative;
+	display: flex;
 }
-
 .locations, .amenities {
-	height: 100%;
 	width: 25%;
-	margin-left: 40px;
+	height: 100%;
 }
-
 .locations {
 	border-right: 1px solid #dddddd;
-	display: inline-block;
 }
-
-.amenities {
-	display: inline-block;
-}
-
 .locations h3, .amenities h3 {
 	font-weight: 600;
-	margin-bottom: 5px;
+	margin-left: 40px;
 }
-
 .locations h4, .amenities h4 {
 	font-weight: 400;
 	font-size: 14px;
-	margin: 0;
+	margin-top: -13px;
+	margin-left: 40px;
 }
-
 .filters button {
 	font-size: 18px;
 	background-color: #ff5a5f;
 	color: #ffffff;
 	height: 48px;
 	width: 20%;
-	border-style: none;
+	border: none;
 	border-radius: 4px;
 	position: absolute;
 	top: 50%;
-	right: 30px;
 	transform: translateY(-50%);
+	right: 30px;
+	cursor: pointer;
 }
-
 .filters button:hover {
 	opacity: 90%;
 }
