--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -20,6 +20,7 @@
 	padding: 20px;
 	position: relative;
 	margin: 20px;
+	height: fit-content;
 }
 .places article h2 {
 	font-size: 30px;
@@ -85,4 +86,81 @@
 }
 .places article .user {
 	margin-top: 20px;
+}
+.places article .amenities {
+	margin-top: 40px;
+	width: 100%;
+}
+.places article .amenities ul {
+	padding-left: 0px;
+	list-style-type: none;
+}
+.places article .amenities ul li {
+	margin-bottom: 5px;
+}
+.places article .amenities ul li:nth-child(1)::before {
+	content: "";
+	display: inline-block;
+	height: 28px;
+	width: 28px;
+	margin-bottom: -8px;
+	margin-right: 10px;
+	background: url("../images/icon_tv.png");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+.places article .amenities ul li:nth-child(2)::before {
+	content: "";
+	display: inline-block;
+	height: 28px;
+	width: 28px;
+	margin-bottom: -8px;
+	margin-right: 10px;
+	background: url("../images/icon_wifi.png");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+.places article .amenities ul li:nth-child(3)::before {
+	content: "";
+	display: inline-block;
+	height: 28px;
+	width: 28px;
+	margin-bottom: -8px;
+	margin-right: 10px;
+	background: url("../images/icon_pets.png");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+.places article .amenities h2 {
+	border-bottom: 1px solid #dddddd;
+	text-align: left;
+	padding: 10px 0;
+	font-size: 16px;
+}
+.places article .reviews {
+	margin-top: 40px;
+}
+.places article .reviews h2 {
+	border-bottom: 1px solid #dddddd;
+	text-align: left;
+	padding: 10px 0;
+	font-size: 16px;
+}
+.places article .reviews ul {
+	list-style-type: none;
+	padding: 0;
+}
+.places article .reviews ul li{
+	margin-bottom: 30px;
+}
+.places article .reviews ul h3{
+	margin-bottom: 5px;
+	font-size: 14px;
+}
+.places article .reviews ul p{
+	margin: 0;
+	font-size: 12px;
 }
